// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Container: Change Plan should not show plans 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      />
      <AccessControl
        condition={[Function]}
      >
        <Panel
          actions={null}
          title="Add a Credit Card"
        >
          <Panel.Section>
            <Connect(PaymentForm)
              formName="changePlan"
            />
          </Panel.Section>
          <Panel.Section>
            <Connect(BillingAddressForm)
              countries={Array []}
              formName="changePlan"
            />
          </Panel.Section>
        </Panel>
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should render 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        <_default
          onChange={[Function]}
          plans={
            Array [
              Object {
                "code": "paid",
                "isFree": false,
                "volume": 15000,
              },
              Object {
                "code": "free",
                "isFree": true,
                "volume": 100000,
              },
            ]
          }
        />
      </Panel>
      <AccessControl
        condition={[Function]}
      >
        <Panel
          actions={null}
          title="Add a Credit Card"
        >
          <Panel.Section>
            <Connect(PaymentForm)
              formName="changePlan"
            />
          </Panel.Section>
          <Panel.Section>
            <Connect(BillingAddressForm)
              countries={Array []}
              formName="changePlan"
            />
          </Panel.Section>
        </Panel>
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;

exports[`Form Container: Change Plan should render error 1`] = `
<ApiErrorBanner
  errorDetails="Oh no! It broke."
  message="We couldn't render the page. Reload to try again."
  reload={[Function]}
  status="danger"
/>
`;

exports[`Form Container: Change Plan should show saved card 1`] = `
<form>
  <Grid>
    <Grid.Column>
      <Panel
        title="Select A Plan"
      >
        <_default
          onChange={[Function]}
          plans={
            Array [
              Object {
                "code": "paid",
                "isFree": false,
                "volume": 15000,
              },
              Object {
                "code": "free",
                "isFree": true,
                "volume": 100000,
              },
            ]
          }
        />
      </Panel>
      <AccessControl
        condition={[Function]}
      >
        <Panel
          actions={
            Array [
              Object {
                "color": "orange",
                "content": "Use Another Credit Card",
                "onClick": [Function],
              },
            ]
          }
          title="Pay With Saved Payment Method"
        >
          <Panel.Section>
            <CardSummary
              billing={Object {}}
            />
          </Panel.Section>
        </Panel>
      </AccessControl>
    </Grid.Column>
    <Grid.Column
      md={5}
      xs={12}
    >
      <Confirmation
        billingEnabled={true}
        current={Object {}}
        disableSubmit={true}
        selected={Object {}}
        selectedPromo={Object {}}
        verifyPromoCode={[MockFunction]}
      />
    </Grid.Column>
  </Grid>
</form>
`;
